# toaster

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  CONTRIBUTING.md  CRUSH.md  PRD.md  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
.github/: copilot-instructions.md
.github/agents/: architect.agent.md  builder.agent.md  code-reviewer.md  cut-drift-fuzzer.agent.md  eval-harness-runner.agent.md  eval-harness-runner.md  plugin-reviewer.agent.md  product-manager.agent.md  product-manager.md  repo-auditor.agent.md  repo-auditor.md  waveform-diff.md
.github/hooks/: README.md  architecture-guard.json  build-safety.json  pretool-policy.ps1  pretool-policy.sh
.github/instructions/: plugin-authoring.instructions.md
.github/prompts/: dump-debug.prompt.md  launch-toaster.prompt.md  new-plugin.prompt.md  run-eval.prompt.md
.github/registry/: commands.json
.github/workflows/: ci.yml  release.yml  test-build.yml
docs/: PRD.md  build.md  commands.md  design-system.md  design-tokens.md  post-processing.md  settings-placement.md  testing-kb.md
features/.templates/: BLUEPRINT.md  CATEGORIES.md  PRD.md  REQUEST.md  coverage.json  tasks.sql
features/advanced-menu-restoration/: BLUEPRINT.md  PRD.md  REQUEST.md  coverage.json  tasks.sql
features/ass-sidecar-export/: BLUEPRINT.md  CATEGORIES.md  PRD.md  REQUEST.md  coverage.json  tasks.sql
features/brand-title-sizing/: BLUEPRINT.md  CATEGORIES.md  PRD.md  REQUEST.md  coverage.json  tasks.sql
features/build-env-ninja-hardening/: BLUEPRINT.md  CATEGORIES.md  PRD.md  REQUEST.md  coverage.json  tasks.sql
features/caption-designer-orientation/: BLUEPRINT.md  PRD.md  REQUEST.md  coverage.json  tasks.sql
features/caption-profiles-persistence/: BLUEPRINT.md  PRD.md  REQUEST.md  coverage.json  tasks.sql
features/caption-settings-preview/: BLUEPRINT.md  CATEGORIES.md  PRD.md  REQUEST.md  coverage.json  tasks.sql
features/chapter-markers/: BLUEPRINT.md  CATEGORIES.md  PRD.md  REQUEST.md  coverage.json  tasks.sql
features/edit-export-format-override/: BLUEPRINT.md  CATEGORIES.md  PRD.md  REQUEST.md  coverage.json  tasks.sql
features/example-pm-dryrun/: BLUEPRINT.md  PRD.md  REQUEST.md  coverage.json  journal.md  tasks.sql
features/export-audio-only/: BLUEPRINT.md  CATEGORIES.md  PRD.md  REQUEST.md  coverage.json  tasks.sql
features/export-format-mov/: BLUEPRINT.md  CATEGORIES.md  PRD.md  REQUEST.md  coverage.json  tasks.sql
features/export-hardware-encoder/: BLUEPRINT.md  CATEGORIES.md  PRD.md  REQUEST.md  coverage.json  tasks.sql
features/export-loudness/: BLUEPRINT.md  CATEGORIES.md  PRD.md  REQUEST.md  coverage.json  tasks.sql
features/keyboard-shortcuts-cheatsheet/: BLUEPRINT.md  CATEGORIES.md  PRD.md  REQUEST.md  coverage.json  tasks.sql
frontend/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  WaveformView.cpp  WaveformView.h
libtoaster/: CMakeLists.txt  analysis.c  model.c  project.c  toaster.c  toaster.h
scripts/: add-loudness-i18n.mjs  audit-settings-ui.ps1  check-cmake-ninja-env.ps1  check-feature-coverage.ps1  check-feature-tasks.ps1  check-file-sizes.ts  eval-audio-boundary.ps1  eval-edit-quality.ps1  feature-board.ps1  file-size-allowlist.txt  gate-cargo-check-lib.ps1  launch-toaster-monitored.ps1  promote-feature.ps1  run-eval-harness.ps1  scaffold-feature.ps1  setup-env.ps1  verify-build-env-ninja-hardening.ps1
src/: AGENTS.md  App.css  App.tsx  bindings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  lib.rs  llm_client.rs  lock_recovery.rs  portable.rs  settings.rs  transcription_post_process.rs  utils.rs
src-tauri/src/audio_toolkit/: mod.rs  text.rs
src-tauri/src/audio_toolkit/vad/: mod.rs  prefilter.rs  silero.rs  smoothed.rs
src-tauri/src/commands/: app_settings.rs  audio.rs  captions.rs  cleanup.rs  disfluency.rs  editor.rs  export.rs  filler.rs  llm_models.rs  media.rs  mod.rs  models.rs  project.rs  transcribe_file.rs  waveform.rs
src-tauri/src/commands/transcribe_file/: alignment.rs  extract.rs  mod.rs  precision_benchmarks.rs  tests.rs  word_builder.rs
src-tauri/src/commands/waveform/: commands.rs  export_format.rs  mod.rs  preview_cache.rs
src-tauri/src/commands/waveform/tests/: mod.rs  part1.rs  part2.rs
src-tauri/src/managers/: editor.rs  export.rs  filler.rs  filler_tests.rs  history.rs  history_tests.rs  media.rs  mod.rs  model.rs  project.rs  transcription_mock.rs
src-tauri/src/managers/captions/: ass.rs  layout.rs  mod.rs
src-tauri/src/managers/cleanup/: llm_dispatch.rs  mod.rs  prompts.rs  tests.rs
src-tauri/src/managers/editor/: mod.rs  types.rs
src-tauri/src/managers/editor/tests/: basic.rs  common.rs  dual_track_regression.rs  local_llm.rs  mod.rs  precision_eval.rs  seams.rs
src-tauri/src/managers/llm/: catalog.rs  download.rs  inference.rs  mod.rs  tests.rs
src-tauri/src/managers/model/: catalog.rs  download.rs  hardware_profile.rs  mod.rs  recommendation.rs  tests.rs
src-tauri/src/managers/model/catalog/: mod.rs  transcription.rs  vad.rs
src-tauri/src/managers/splice/: boundaries.rs  loudness.rs
src-tauri/src/managers/transcription/: adapter.rs  adapter_normalize.rs  adapter_tests.rs  mod.rs  tests.rs
src-tauri/src/settings/: defaults.rs  io.rs  mod.rs  sanitize.rs  types.rs
src-tauri/src/shortcut/: mod.rs
src-tauri/tests/: audio_only_roundtrip_durations.rs  export_format_args_no_video_stream.rs  export_format_codec_map.rs  filler_gap_classification.rs  loudness_preflight.rs
src-tauri/tests/fixtures/caption_layout/: desktop_1920x1080.json  mobile_1080x1920.json
src-tauri/tests/fixtures/disfluency/: toaster_example_candidates.fixture.json  toaster_example_human_oracle.json
src-tauri/tests/fixtures/parity/: phrase_alpha.oracle.meta.json  phrase_bravo.oracle.meta.json
src-tauri/tests/fixtures/parity/backend_outputs/: README.md
test/: CMakeLists.txt  test-edit.c  test-export.c  test-model.c
tests/: app.spec.ts  exportPipeline.spec.ts  settingsRoundTrip.spec.ts  settingsUIAudit.spec.ts  skipSchedule.spec.ts  transcriptEdit.spec.ts
(+250 files in other folders)
