[package]
name = "toaster"
version = "0.1.0"
description = "Toaster — edit video by editing text"
authors = ["itsnotaboutthecell"]
edition = "2021"
license = "MIT"
default-run = "toaster"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "toaster_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dependencies]
once_cell = "1"
tauri = { version = "2.10.2", features = [
  "protocol-asset",
  'image-png',
] }
tauri-plugin-log = "2.7.1"
tauri-plugin-opener = "2.5.2"
tauri-plugin-store = "2.4.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-process = "2.3.1"
rusqlite_migration = "2.3"
tauri-plugin-fs = "2.4.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.16.0"
anyhow = "1.0.95"
rubato = "0.16.2"
hound = "3.5.1"
ebur128 = "0.1"
rustfft = "6"
log = "0.4.25"
env_filter = "0.1.0"
tokio = "1.43.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
strsim = "0.11.0"
natural = "0.5.0"
regex = "1"
chrono = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
tar = "0.4.44"
flate2 = "1.0"
sha2 = "0.10"
transcribe-rs = { version = "0.3.8", features = ["whisper-cpp", "onnx"] }
ferrous-opencc = "0.2.3"
clap = { version = "4", features = ["derive"] }
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-dialog = "2.6"
fontdue = "0.9"
sysinfo = { version = "0.33", default-features = false, features = ["system", "disk"] }

# Optional local-GGUF inference backend. Gated behind the `local-llm` feature
# because llama-cpp-2 pulls cmake + ninja + upstream llama.cpp and can add
# 2-5 minutes to cold builds (see AGENTS.md "Cargo runtime expectations").
# CPU-only by default; GPU backends are a v2 concern.
# See features/local-llm-model-catalog/BLUEPRINT.md for rationale.
llama-cpp-2 = { version = "0.1.123", optional = true, default-features = false }

[features]
default = []
# Enables the in-process GGUF LLM backend used by the post-process
# `local` provider. Off by default: end users opt in via a packaged
# release built with `--features local-llm`. Keeping it off-by-default
# means the routine `cargo check -p toaster --lib` gate does not have
# to cold-build llama.cpp.
local-llm = ["dep:llama-cpp-2"]
# Exposes the in-crate `MockBackend` for downstream integration tests
# without enabling llama.cpp. Not needed for the in-tree `#[cfg(test)]`
# unit tests which already compile `MockBackend`.
mock-llm = []


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-updater = "2.10.0"

[target.'cfg(windows)'.dependencies]
transcribe-rs = { version = "0.3.3", features = ["whisper-vulkan", "ort-directml"] }
windows = { version = "0.61.3", features = [
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_Foundation",
] }
winreg = "0.55"

[target.'cfg(target_os = "macos")'.dependencies]
transcribe-rs = { version = "0.3.3", features = ["whisper-metal"] }

[target.'cfg(target_os = "linux")'.dependencies]
transcribe-rs = { version = "0.3.3", features = ["whisper-vulkan"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "unwind"
