[package]
name = "toaster"
version = "0.1.0"
description = "Toaster — edit video by editing text"
authors = ["itsnotaboutthecell"]
edition = "2021"
license = "MIT"
default-run = "toaster"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "toaster_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dependencies]
once_cell = "1"
tauri = { version = "2.10.2", features = [
  "protocol-asset",
  'image-png',
] }
tauri-plugin-log = "2.7.1"
tauri-plugin-opener = "2.5.2"
tauri-plugin-store = "2.4.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-fs = "2.4.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.16.0"
anyhow = "1.0.95"
rubato = "0.16.2"
hound = "3.5.1"
ebur128 = "0.1"
rustfft = "6"
log = "0.4.25"
env_filter = "0.1.0"
tokio = "1.43.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
strsim = "0.11.0"
natural = "0.5.0"
regex = "1"
chrono = "0.4"
tar = "0.4.44"
flate2 = "1.0"
sha2 = "0.10"
transcribe-rs = { version = "0.3.8", features = ["whisper-cpp", "onnx"] }
# Direct ORT handle for the file-based Silero VAD wrapper in
# `audio_toolkit::vad`. Pinned to the version `transcribe-rs` already
# pulls in (see Cargo.lock) so we do not fracture the ONNX runtime.
# AD-1 in features/reintroduce-silero-vad/BLUEPRINT.md: do not bring
# `vad-rs` back — keep one runtime, one upgrade path.
ort = "=2.0.0-rc.12"
clap = { version = "4", features = ["derive"] }
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-dialog = "2.6"
fontdue = "0.9"
# System probe for hardware-aware-model-picker: CPU / RAM / disk.
# Cross-platform, local-only (no network), MIT/Apache-licensed. Pulled in
# by `managers::model::hardware_profile`. When upgrading, confirm
# `System::new_all` + `Disks::new_with_refreshed_list` remain offline.
sysinfo = { version = "0.32", default-features = false, features = ["system", "disk"] }

[features]
default = []


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-updater = "2.10.0"

[target.'cfg(windows)'.dependencies]
transcribe-rs = { version = "0.3.3", features = ["whisper-vulkan", "ort-directml"] }
windows = { version = "0.61.3", features = [
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_Foundation",
] }
winreg = "0.55"

[target.'cfg(target_os = "macos")'.dependencies]
transcribe-rs = { version = "0.3.3", features = ["whisper-metal"] }

[target.'cfg(target_os = "linux")'.dependencies]
transcribe-rs = { version = "0.3.3", features = ["whisper-vulkan"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "unwind"
